# config-python

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  pyproject.toml
adr/: 0001-vault-source.md
src/dagstack/config/: __init__.py  _constants.py  _secret_grammar.py  _version.py  canonical_json.py  config.py  errors.py  interpolation.py  merge.py  paths.py  secrets.py  secrets_mask.py  sources.py  subscription.py  vault.py
tests/: test_canonical_json.py  test_config.py  test_config_secrets_integration.py  test_conformance.py  test_errors.py  test_interpolation.py  test_merge.py  test_paths.py  test_phase2_runtime.py  test_secret_grammar.py  test_secrets_env.py  test_smoke.py  test_sources.py  test_subscription.py  test_v2_2_hardening.py  test_vault_source.py
tests/docs_examples/: README.md  test_concepts_layers.py  test_concepts_sources.py  test_guides_declaring_section.py  test_guides_testing.py  test_intro.py  test_reference_errors.py
